fix: clipped boxes from #141

--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -159,3 +159,10 @@
   background-color: rgb(var(--ctp-pink));
   color: var(--text-on-accent);
 }
+
+/* Fix for #141 */
+
+.mod-left-split .workspace-tab-header-container .workspace-tab-header-container-inner,
+.mod-right-split .workspace-tab-header-container .workspace-tab-header-container-inner {
+overflow: visible;
+}
